Bug 753117 - replace use of repoze.who with plain pyramid auth; r=telliott

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,8 @@
 0.5
 ===
 
-???
+- remove use of repoze.who for authentication; all auth is now done
+  using standard pyramid plugins.
 
 
 0.4 - 2012-06-01
